tests/invalid/generated_binop_bitand_str_int/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: str = "hello"
    y: int = 1
    z = x & y
